--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,14 @@ main {
 .fondoTextoCarousel{
   background-color: rgba(128, 128, 128, 0.516);
 }
+
+.imgCarousel{
+  max-height: 700px;
+  object-fit: cover;
+}
+
+@media (max-width: 767px) {
+  .titulo-carousel {
+    font-size: 1.1rem;
+  }
+}
